@@ -1,5 +1,5 @@
 duff - Duplicate file finder
-Copyright (c) 2004 Camilla Berglund <elmindreda@users.sourceforge.net>
+Copyright (c) 2005 Camilla Berglund <elmindreda@users.sourceforge.net>
 
 This software is provided 'as-is', without any express or implied
 warranty. In no event will the authors be held liable for any
