@@ -1,5 +1,5 @@
 duff - Duplicate file finder
-Copyright (c) 2004 Camilla Berglund <elmindreda@users.sourceforge.net>
+Copyright (c) 2005 Camilla Berglund <elmindreda@users.sourceforge.net>
 
 Version 0.3
 ===========
@@ -7,6 +7,10 @@ Version 0.3
 * Added explicit link handling options (-L,-P).
 * Added sha1-asaddi for SHA1 hash calculation.
 * Completed basic manpage.
+* Added sample size limit option (-l).
+* Added very brief hacking guide.
+* Compatibility, portability, refactoring, cleanup.
+* Added basic (non symlink-aware) excess mode (-e).
 
 Version 0.2
 ===========
